--- a/crazy-time-poland3.html
+++ b/crazy-time-poland3.html
@@ -52,9 +52,9 @@
               <![endif]-->
               <table cellpadding="0" cellspacing="0" style="width: 100%; background-color:#340933; border: none; border-spacing: 0; outline: none;">
                 <tr>
-                  <td style="text-align: center; width: 600px; max-width: 100%; height: 77px; max-height: 100%; padding: 0; border: none; outline: none;" background="https://storage.googleapis.com/files.netoplaycdn.com/mailers/gratowin_new/backgrounds/purple_dark_background.png">
-                    <a href="%LINK%%" target="_blank" xt="SPCLICK" style="font-size: 0; border: none; outline: none;">
-                      <img src="https://storage.googleapis.com/files.netoplaycdn.com/mailers/gratowin_new/icons/logo.png" alt="GratoWin logo" title="GratoWin" style="width: 216px; max-width: 100%; height: auto; border: 0; outline: none;" />
+                  <td style="text-align: center; width: 600px; max-width: 100%; height: 77px; max-height: 100%; padding: 0; border: none; outline: none;" background="hg">
+                    <a href="%LINK%%" target="_blank" xt="x" style="font-size: 0; border: none; outline: none;">
+                      <img src="g" alt=" logo" title="" style="width: 216px; max-width: 100%; height: auto; border: 0; outline: none;" />
                     </a>
                   </td>
                 </tr>
@@ -67,7 +67,7 @@
         <tr>
           <td style="margin:0; padding: 0; border: none; outline: none;">
             <a href="%LINK%%" target="_blank" xt="SPCLICK" style="font-size: 0; margin: 0; border: none; outline: none;">
-              <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/main_image_wheel_poland.jpg" alt="GratoWin banner" style="width: 600px; max-width: 100%; height: auto; border: 0;" />
+              <img src="g" alt="banner" style="width: 600px; max-width: 100%; height: auto; border: 0;" />
             </a>
           </td>
         </tr>
@@ -76,25 +76,25 @@
         <tr>
           <td style="text-align: center; padding: 30px 15px 20px 15px;">
               <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 23px; line-height: 140%; padding: 0; margin: 0;"><b>&lt;FIRST_NAME&gt;,</b></p>
-              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0 0 20px 0; margin: 0;">nie chcesz tego przegapić!</p>
-              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">Wypróbuj nasze gry, korzystając z50 </p>
-              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">darmowych spinów na nasz koszt</p>
-              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">(bez zobowiązań!).</p>
+              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0 0 20px 0; margin: 0;">i</p>
+              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">f </p>
+              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">f</p>
+              <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 21px; font-weight: 600; line-height: 140%; padding: 0; margin: 0;">f</p>
           </td>
         </tr>
 
         <!-- ICONS MESSAGE -->
         <tr>
           <td style="text-align: center; padding: 0 15px;">
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 22px; line-height: 140%; padding: 15px 0 0 0; margin: 0;"><b>Zarejestruj się i zdobądź 50 darmowych spinów</b></p>
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 22px; line-height: 140%; padding: 0px 0 5px 0; margin: 0;"><b>w tych najlepszych grach:</b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 22px; line-height: 140%; padding: 15px 0 0 0; margin: 0;"><b>f</b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 22px; line-height: 140%; padding: 0px 0 5px 0; margin: 0;"><b>f:</b></p>
           </td>
         </tr>
 
         <!-- THREE ICONS -->
         <tr>
           <td align="center" style="padding: 30px 15px 0 15px;">
-            <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/games_images.png" alt="Games icons" style="width: 530px; max-width: 100%; height: auto; border: 0;" />
+            <img src="g" alt="Games icons" style="width: 530px; max-width: 100%; height: auto; border: 0;" />
           </td>
         </tr>
         
@@ -102,8 +102,8 @@
         <!-- MESSAGE BEFORE BUTTON -->
         <tr>
           <td style="text-align: center; padding: 7px 15px 7px 15px;">
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 25px 0 0 0; margin: 0;"><b>Nie zapomnij! Zdobądź pakiet powitalny </b></p>
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>o wartości do 15 000 zł za pierwsze 3 depozyty.</b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 25px 0 0 0; margin: 0;"><b>f </b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>of.</b></p>
           </td>
         </tr>
 
@@ -111,7 +111,7 @@
         <tr>
           <td style="padding: 5px 15px 20px 10px; text-align: center; font-family: Montserrat, Medium, sans-serif;">
             <a href="%LINK%%" name="" target="_blank" xt="SPCLICK">
-              <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/CTA.png" alt="Register now" style="width: 324px; max-width: 100%; height: auto; border: 0;" />
+              <img src="g" alt="Register now" style="width: 324px; max-width: 100%; height: auto; border: 0;" />
             </a>
           </td>
         </tr>
@@ -119,8 +119,8 @@
         <!-- INFO MESSAGE -->
         <tr>
           <td style="text-align: center; padding: 15px 15px;">
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>Wiemy, że nasze bonusy są niesamowite,</b></p>
-            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>ale to nie wszystko! Oferujemy również:</b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>f</b></p>
+            <p style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 19px; line-height: 140%; padding: 0; margin: 0;"><b>f</b></p>
           </td>
         </tr>
 
@@ -129,19 +129,19 @@
           <td style="text-align: left; padding: 10px 40px 10px 25px;" class="info-list">
             <ul style="color: #C40404; font-size: 24px;">
               <li style="padding: 0;">
-                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Najwyższej klasy obsługę klienta</span>
+                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Na</span>
               </li>
               <li style="padding: 0;">
-                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Najbardziej satysfakcjonujący program VIP</span>
+                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Na</span>
               </li>
               <li style="padding: 0;">
-                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Wyjątkowe automaty, których nie znajdziesz nigdzie indziej!</span>
+                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">!</span>
               </li>
               <li style="padding: 0;">
-                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Ekspresowe wypłaty</span>
+                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">y</span>
               </li>
               <li style="padding: 0;">
-                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">Promocje Piątkowa zabawa i Cotygodniowy cashback</span>
+                <span style="color: #081139; font-family: Montserrat, Medium, sans-serif; font-size: 16px; line-height: 140%; padding: 5px 0 5px 0;">f</span>
               </li>
             </ul>
           </td>
@@ -164,7 +164,7 @@
                       <!-- FOOTER ICONS 1 -->
                       <tr>
                         <td style="padding: 35px 0;">
-                          <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/Trust_symbols_poland.png" alt="Trust images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: bottom;" />
+                          <img src="g" alt="images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: bottom;" />
                         </td>
                       </tr>
 
@@ -176,7 +176,7 @@
                       <!-- FOOTER ICONS 2 -->
                       <tr>
                         <td style="padding: 35px 0;">
-                          <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/icons_poland.png" alt="Security images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: top;" />
+                          <img src="g" alt="images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: top;" />
                         </td>
                       </tr>
 
@@ -188,7 +188,7 @@
                       <!-- FOOTER ICONS 3 -->
                       <tr>
                         <td style="padding: 35px 0; height: 50px;">
-                          <img src="https://storage.googleapis.com/medias.netopartners.com/Mailers/Gratowin/Crazy_Time/pl/Payment_Options_Poland.png" alt="Payments images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: top;" />
+                          <img src="g" alt="Payments images" style="max-width: 100%; height: auto; display: inline-block; border: 0; vertical-align: top;" />
                         </td>
                       </tr>
 
@@ -200,9 +200,9 @@
                       <!-- FOOTER CONTENT -->
                       <tr>
                         <td class="footer-content" style="text-align: center; padding: 35px 5px 90px 5px;">
-                          <p style="color: #B7B6B6; font-family: Roboto, Arial, sans-serif; font-size: 15px; line-height: 140%; padding: 5px 0;">Należy pamiętać, że obowiązują wszystkie warunki użytkownika <a href="%LINK%%" style="color: #B7B6B6; text-decoration: none;">Gratowin.com oraz zasady dotyczące bonusów.</p>
+                          <p style="color: #B7B6B6; font-family: Roboto, Arial, sans-serif; font-size: 15px; line-height: 140%; padding: 5px 0;">ska <a href="%LINK%%" style="color: #B7B6B6; text-decoration: none;">G</p>
                           <p>&nbsp;</p>
-                          <p style="color: #B7B6B6; font-family: Roboto, Arial, sans-serif; font-size: 15px; line-height: 140%; padding: 5px 0;">Darmowe spiny i bonusy od pierwszego depozytu są ograniczone do jednego bonusu na gospodarstwo domowe. Maksymalny bonus wynosi 15 000 zł za 3 depozyty. Aby uzyskać więcej informacji, skontaktuj się z działem pomocy technicznej pod adresem <b><a href="mailto:support@gratowin.com" target="_blank" xt="SPCLICK" style="color: #B7B6B6; text-decoration: none;">support@gratowin.com</a></b></p>
+                          <p style="color: #B7B6B6; font-family: Roboto, Arial, sans-serif; font-size: 15px; line-height: 140%; padding: 5px 0;">m <b><a href="mailto:support@gratowin.com" target="_blank" xt="SPCLICK" style="color: #B7B6B6; text-decoration: none;">sup</a></b></p>
                           <p>&nbsp;</p>
                         </td>
                       </tr>
